# Database_manage

./: README.md  clinsys.py
cppver/: CMakeLists.txt  ClinicalApp.cpp  ClinicalApp.h  CsvTable.cpp  CsvTable.h  README.md  main.cpp
pyver/: clinsys.py
